# GTestProject

./: CMakeLists.txt  README.md  clean-build  run  script
input/: in.txt
src/: Account.cpp  Account.hpp  main.cpp
src/Account/: Account.cpp  Account.hpp  IAccount.hpp
src/Employee/: Employee.cpp  Employee.hpp  IEmployee.hpp
src/Utils/: UseEmployee.hpp
src/handlers/: HandleEmployees.hpp  IHandleEmployees.hpp
src/logger/: Logger.cpp  Logger.hpp
src/utils/: UseEmployee.hpp  UseEmployees.hpp
test/: CMakeLists.txt
test/mocks/: MockAccount.hpp  MockEmployee.hpp  MockEmployeesHandler.hpp
test/src/: AccountTest.cpp  EmployeeTest.cpp  EmployeesHandlerTest.cpp  MockEmployee.hpp  UseEmployeeTest.cpp  UseEmployeesTest.cpp  test_main.cpp
